--- a/chill/styles.css
+++ b/chill/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: cornflowerblue;
+    /* background-color: cornflowerblue; */
+    background-color: black;
 }
 
 #lofi {
